# CampusKnowledgeBase

./: .gitignore  README.md
aiml/: askllm.py  config.py  extensions.py  main.py  pyproject.toml  rag.py
aiml/auth/: google_oauth.py
aiml/data/FY/Sem-1/: FY_Sem-1_chunks.jsonl
aiml/data/FY/Sem-1/Bee/: metadata.json
aiml/data/FY/Sem-1/Bee Lab/: metadata.json
aiml/data/FY/Sem-1/Bio/: metadata.json
aiml/data/FY/Sem-1/Chem/: metadata.json
aiml/data/FY/Sem-1/Chem Lab/: metadata.json
aiml/data/FY/Sem-1/Drawing/: ED practical video autocad resources.docx  metadata.json
aiml/data/FY/Sem-1/Maths/: metadata.json
aiml/data/FY/Sem-1/Physics/: metadata.json
aiml/data/FY/Sem-1/Physics Lab/: metadata.json
aiml/data/FY/Sem-1/SPM/: metadata.json
aiml/data/FY/Sem-1/SPM Lab/: metadata.json
aiml/data/FY/Sem-1/SPM/Module 1 Introduction To Structured Programming/: SPM_Module1_1.1_PPT.pptx
aiml/data/FY/Sem-1/SPM/Module 4 UDF and Structures/: 4.2_Structure _Union.pptx  4.3_Pointers.pptx  SPM_4.1_UDF.pptx
aiml/data/SY/Sem-3/COA/: 05_Input Output.pptx  06_Multiprocessor Configuration.pptx  Module 3.pptx
aiml/data/SY/Sem-3/COA Lab/: metadata.json
aiml/data/SY/Sem-3/DDL/: DDL_Exp4.docx
aiml/data/SY/Sem-3/DDL Lab/: metadata.json
aiml/data/SY/Sem-3/DSA/: SDC_1.1 - DS Introduction.pptx  SDC_2.1_LinkedList_wdt_MCQs_MInors2024 -Till 6.8.2024.pptx  SDC_2.2_Stacks_Till Lecture on 23.7.2024 (1).pptx  SDC_ADT (1).pptx  metadata.json
aiml/ingestion/: chunker.py  ingest.py
aiml/ingestion/output/: chunks.jsonl  progress.json
aiml/routes/: auth_routes.py
(+59 files in other folders)
